--- a/fam_get_option.html
+++ b/fam_get_option.html
@@ -14,6 +14,7 @@
 		<nav>
 			<ul>
 				<li><a href="index.html">Home</a></li>
+				<li><a href="release_notes.html">Release Notes</a></li>
 				<li><a href="limitations.html">Design Choices</a></li>
 				<li><a href="errors.html">Exceptions and Error Codes</a></li>
 				<li><a href="services.html">Services</a></li>
@@ -279,7 +280,7 @@
 		implementation and should not be used. It return the default values.
 		<code>&quot;DEFAULT_REGION_NAME&quot;</code>, <code>&quot;FAM_THREAD_MODEL&quot;</code> and <code>&quot;FAM_CONTEXT_MODEL&quot;</code></p>
 	<h2>Return Values</h2>
-	<p>A pointer to the value of the option. Throws Fam_Exception on
+	<p>A pointer to the value of the option. Throws <code>Fam_Exception</code> on
 		error.</p>
 		<h2>Fam Error Numbers</h2>
 	<table>
