--- a/fam_abort.html
+++ b/fam_abort.html
@@ -14,6 +14,7 @@
 		<nav>
 			<ul>
 				<li><a href="index.html">Home</a></li>
+				<li><a href="release_notes.html">Release Notes</a></li>
 				<li><a href="limitations.html">Design Choices</a></li>
 				<li><a href="errors.html">Exceptions and Error Codes</a></li>
 				<li><a href="services.html">Services</a></li>
@@ -115,7 +116,7 @@
 	<p>None.</p>
 	<h2>Notes</h2>
 	<p>The OpenFAM library asynchronously notifies all other
-		cooperating PEs when fam_abort() is called, and the method returns
+		cooperating PEs when <code>fam_abort()</code> is called, and the method returns
 		before other PEs terminate. Since data consistency in FAM cannot be
 		guaranteed by the library, this method should not be used as the
 		normal exit.</p>
