--- a/release_notes.html
+++ b/release_notes.html
@@ -93,73 +93,41 @@
 			<hr>
 		</nav>
 		<article>
-			<h1 class="code">openfam::fam::fam_fence</h1>
-	<p>Ensures that FAM operations issued by the
-		calling PE thread before the fence are completed before FAM operations
-		issued after the fence are dispatched.</p>
-	<h2>Synopsis</h2>
-	<p class="code">void fam_fence(void);</p>
-	<h2>Description</h2>
-	<p>This method orders FAM operations (put,
-		scatter, atomics, copy) issued by the calling PE thread before the
-		fence to be performed before FAM operations issued by the calling PE
-		thread after the fence. This method is non-blocking.</p>
-	<h2>Input Arguments</h2>
-	<p>None.</p>
-	<h2>Return Values</h2>
-	<p>None. Throws Fam_Exception on error.</p>
-	<h2>Fam Error Numbers</h2>
-	<table>
-	<tbody>
-	<tr><th>Error</th><th>Description</th></tr>
-	
-	<tr><td class="code">FAM_ERR_LIBFABRIC</td><td>Libfabric error occurred.</td></tr>
-	<tr><td class="code">FAM_ERR_NOPERM</td><td>Caller does not have access rights</td></tr>
-	</tbody>
-	</table>
-	<h2>Notes</h2>
-	<p>Note that this method does NOT order
-		fam_map()-enabled load/store accesses by the processor to FAM.</p>
-	<h2>Example</h2>
-<pre>
-#include &lt;string.h>
-#include &lt;fam/fam.h>
-#include &lt;fam/fam_exception.h>
-using namespace std;
-using namespace openfam;
-
-int main(void) {
-	fam *myFam = new fam();
-	// ... Initialization code here
-	try {
-		// look up the descriptor to a previously allocated data item
-		// (a 50-element integer array)
-		Fam_Descriptor *descriptor = myFam->fam_lookup("myItem","myRegion");
-		
-		// local data
-		int local[] = {0,1,2,3,4};
-		uint64_t indexes[] = {0, 7, 3, 5, 6};
-			
-		// scatter local data in myItem[0,7,3,5,6] respectively
-		myFam->fam_scatter_nonblocking(local, descriptor, 5, indexes, sizeof(int));
-		
-		// ensure that the scatter is performed before subsequent FAM updates
-		myFam->fam_fence();
-		
-		// now update later elements of the array in FAM
-		int newLocal[] = {0,1,2,3,4,5,6,7,8,9};
-		
-		// update elements 11 - 20 in FAM using values in local memory
-		myFam->fam_put_nonblocking(newLocal, descriptor, 10*sizeof(int), sizeof(local));
-		
-		// ... subsequent code here
-	} catch (Fam_Exception &amp;e) {
-		printf("fam API failed: %d: %s\n", e.fam_error(), e.fam_error_msg());
-	}
-		
-	// ... Finalization code follows
-}
-</pre>
+		<h1>OpenFAM release notes</h1>
+		These notes summarize the different releases of OpenFAM. A more detailed list of list of features, enhancements and bug fixes are added to the source tree in all the released versions,
+		and are provided in the corresponding NEWS.md file. Build and installation instructions are listed in the corresponding README.md file located in the source tree. 
+		<h2>OpenFAM version 2.0 (release 1)</h2>
+		<p>The current version of OpenFAM is 2.0.</p>
+		<ul>
+			<li>Scalability improvements: Support for a larger pool of memory by scaling to multiple memory servers. See <a href="services.html">services</a> for more details. </li>
+			<li>Performance improvements: Memory management and metadata operations have been optimized. 
+				<ul>
+					<li>Background worker threads (unused in OpenFAM) were disabled from the memory service.</li>
+					<li>Allocation performance improved by moving the memset operation to zero allocated memory from fam_allocate() to fam_deallocate() path.</li>  
+				</ul> 
+			</li>
+			<li>OpenFAM APIs changes: 
+				<ul>
+					<li><code>fam_size</code> API has been replaced with <code>fam_stat</code> API.</li>
+					<li><code>fam_copy</code> API has been changed to allow data copies between regions.</li>
+					<li>Unused return type was changed from int to void for the following APIs: <code>fam_initialize,
+						fam_resize_region, fam_change_permissions, fam_put_blocking, fam_get_blocking, fam_gather_blocking, fam_scatter_blocking</code>. 
+					<li><code>fam_barrier_all</code> has been added as a supported API.</li>
+				</ul>
+			</li>
+			<li>Exception and error handling was simplified. All OpenFAM APIs returns only one exception type on error, i.e, <code>Fam_Exception</code>. </li>
+		</ul>
+		<h2>OpenFAM version 1.0 (release 0.4)</h2>
+		<ul>
+				<li>Initial public release of OpenFAM reference implementation</li>
+				<li>Memory allocator models implemented: "Shared memory model" to be used on scale-up platforms and "Memory server model" to be used on scale-out (cluster) platforms.</li>
+				<li>Memory server model uses libfabric and support sockets, verbs and psm providers. </li>
+		</ul>
+		<h1>Documentation updates</h1>
+		<ul>
+				<li><a href="v2.0/index.html">OpenFAM version 2.0</a></li>
+				<li><a href="v1.0/index.html">OpenFAM version 1.0</a></li>
+		</ul>
 		</article>
 	</section>
 	<footer>
